update conf description

--- a/app/about.html
+++ b/app/about.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-55428637-2');
@@ -66,7 +70,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a>
+            </li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -115,7 +120,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
           <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
@@ -147,19 +153,26 @@
   </nav>
 
   <section>
-    <div class="content-md">
+    <div class="content-lg">
       <h2 class="text-lg">About</h2>
       <p class="text-md">On behalf of Minsk front-end/JavaScript community, The RS crew is glad to announce the upcoming
         The Rolling
-        Scopes front-end conference! Previous ones were too good to do it again. Let’s Roll!</p>
+        Scopes Conference!</p>
+      <p class="text-md">This year The Rolling Scopes Conference will go beyond Front-end and JavaScript and utilize
+        full three days of
+        discussions about JavaScript, Front-end, Frameworks, Mobile, Smart TV, Node.JS and etc.
+      </p>
+      <p class="text-md">Previous ones were too good to do it again. Let’s Roll!</p>
     </div>
   </section>
   <section class="shorted">
     <div class="content-sm text-center">
       <p class="text-lg">The Rolling Scopes Conference</p>
-      <!--<p class="text-md">March 16-17, 2019</p>-->
+      <p class="text-md">August 9-11, 2019</p>
 
-      <!--<p class="text-center"><a class="btn margin-bottom-md" href="https://imaguru.by/product-tag/rolling-scopes/">Buy a Ticket</a></p>-->
+      <p class="text-center"><a class="btn margin-bottom-md"
+                                href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy a Ticket</a>
+      </p>
 
       <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
         <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
@@ -178,9 +191,8 @@
 
   <section>
     <div class="content-md">
-      <p class="text-lg">The biggest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
-        amazing
-        people of the front-end scene.</p>
+      <p class="text-lg">The biggest conference in Belarus focusing on developing and designing Web, JavaScript,
+        Node.JS, Mobile, Smart TV, VR/AR applications. Backed by The Rolling Scopes developer community since 2015.</p>
     </div>
   </section>
 
@@ -206,18 +218,19 @@
   <section>
     <div class="content-md">
       <ul class="previous-conf-list text-lg">
-        <li><a href="https://2015.conf.rollingscopes.com/">2015 </a>
+        <li><a target="_blank" href="https://2015.conf.rollingscopes.com/">2015 </a>
         </li>
-        <li><a href="https://2016.conf.rollingscopes.com/">2016 </a>
+        <li><a target="_blank" href="https://2016.conf.rollingscopes.com/">2016 </a>
         </li>
-        <li><a href="https://2017.conf.rollingscopes.com/">2017 </a>
+        <li><a target="_blank" href="https://2017.conf.rollingscopes.com/">2017 </a>
         </li>
-        <li><a href="https://2018.conf.rollingscopes.com/">2018 </a>
+        <li><a target="_blank" href="https://2018.conf.rollingscopes.com/">2018 </a>
         </li>
       </ul>
       <p class="text-lg padding-top-md">Join us this year!</p>
-      <p>Currently the agenda is still in progress, but we can promise you two full days of delicious content! Follow us
-        on Twitter or Facebook to learn about the tickets, shedule and other conference news first!</p>
+      <p>Currently the agenda is still in progress, but we can promise you three full days of delicious content! Follow
+        us
+        on Twitter or Facebook to learn about the tickets, schedule and other conference news first!</p>
     </div>
   </section>
 
@@ -228,8 +241,9 @@
                                                     href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
-                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
-        target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+        and <a
+          target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
       <p class="content-xsm">Our hashtag on social media is <a
