--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-55428637-2');
@@ -150,37 +154,42 @@
       <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
-      <p class="text-md">The biggest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
-        amazing
-        people of the front-end scene.</p>
       <p>
         <a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy
           Tickets</a>
+
+        <a class="btn" target="_blank"
+           href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
+          for Speakers</a>
         <!--<a class="btn" href="schedule.html">See Schedule</a>-->
       </p>
-
-      <p><a class="btn" target="_blank"
-            href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
-        for Speakers</a> <a class="btn"
-                            href="mailto:rolling.scopes@gmail.com">Become
-        a Sponsor</a></p>
+      <p class="text-md padding-top-md">The biggest conference in Belarus focusing on developing and designing Web,
+        JavaScript,
+        Node.JS, Mobile, Smart TV, VR/AR applications. Backed by <a href="https://rollingscopes.com/">The
+          Rolling
+          Scopes</a> developer community since 2015.</p>
     </div>
 
   </section>
   <section data-color="#BB94FF">
     <div class="content-md">
-      <p class="text-lg">On behalf of Minsk front-end/JavaScript community, <a
-        href="https://rollingscopes.com/">The Rolling Scopes</a> crew
-        is glad to announce the upcoming
-        RSConf2019 front-end conference! <a href="https://2018.conf.rollingscopes.com/">February 2018</a> was too
-        awesome
-        to
-        do it just once :)</p>
-      <p>Read the <a target="_blank"
-                     href="https://medium.com/@ioana_cis/about-rolling-scopes-conf-83311099e4b0">review</a> about RSConf
-        2017 and watch the <a target="_blank"
-                              href="https://youtu.be/JPdm-lcISBM">video</a>
-        on our Youtube channel.</p>
+      <p class="text-lg">
+        This year The Rolling Scopes Conference will go beyond Front-end and JavaScript and utilize full three days of
+        discussions about JavaScript, Front-end, Frameworks, Mobile, Smart TV, Node.JS.</p>
+      <p> If you want to know more about The Rolling Scope Conferences please check the materials from the previous
+        years:</p>
+      <p class="text-lg">
+        <a target="_blank" href="https://2015.conf.rollingscopes.com/">2015 </a>,
+        <a target="_blank" href="https://2016.conf.rollingscopes.com/">2016 </a>,
+        <a target="_blank" href="https://2017.conf.rollingscopes.com/">2017 </a>,
+        <a target="_blank" href="https://2018.conf.rollingscopes.com/">2018 </a>
+      </p>
+
+      <!--<p>Read the <a target="_blank"-->
+      <!--href="https://medium.com/@ioana_cis/about-rolling-scopes-conf-83311099e4b0">review</a> about RSConf-->
+      <!--2017 and watch the <a target="_blank"-->
+      <!--href="https://youtu.be/JPdm-lcISBM">video</a>-->
+      <!--on our Youtube channel.</p>-->
     </div>
 
   </section>
@@ -392,6 +401,9 @@
       </ul>
 
 
+      <p><a class="btn"
+            href="mailto:rolling.scopes@gmail.com">Become
+        a Partner</a></p>
     </div>
 
   </section>
