--- a/app/venue.html
+++ b/app/venue.html
@@ -153,10 +153,6 @@
       </p>
       <p>vulica Kastryčnickaja 16, Minsk</p>
 
-      <!--<p class="text-lg padding-top-lg">The Rolling Scopes Conference takes place in Minsk annually. This year it-->
-        <!--will be held in The-->
-        <!--Palace of Trade-->
-        <!--Unions in the historical center of the city. The venue has a nice touch of soviet vibes. </p>-->
     </div>
     <div class="content-sm">
 
@@ -182,8 +178,8 @@
 
   <section>
     <div class="content-sm">
-      <!--<p class="text-center"><a class="btn margin-bottom-md" href="https://imaguru.by/product-tag/rolling-scopes/">Buy a-->
-        <!--Ticket</a></p>-->
+      <p class="text-center"><a class="btn margin-bottom-md" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy a
+        Ticket</a></p>
       <p class="text-center">Follow us on <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
         and <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to learn about the tickets and other news first!</p>
