update section width

--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
 
   </section>
   <section data-color="#BB94FF">
-    <div class="content-md">
+    <div class="content-lg">
       <p class="text-lg">
         This year The Rolling Scopes Conference will go beyond Front-end and JavaScript and utilize full three days of
         discussions about JavaScript, Front-end, Frameworks, Mobile, Smart TV, Node.JS.</p>
