update speakers section on the index page

--- a/app/index.html
+++ b/app/index.html
@@ -203,8 +203,9 @@
           <figure>
             <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
             <figcaption>
+              <span class="speaker-company">Self-employed</span>
               <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
-              <p>Minsk, Belarus</p>
+              <p><small>Minsk, Belarus</small></p>
             </figcaption>
           </figure>
         </li>
@@ -213,8 +214,9 @@
           <figure>
             <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
             <figcaption>
+              <span class="speaker-company">Google</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p>Los Angeles, The United States</p>
+              <p><small>Los Angeles, US </small></p>
             </figcaption>
           </figure>
         </li>
@@ -223,8 +225,9 @@
           <figure>
             <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
             <figcaption>
+              <span class="speaker-company">wix.com</span>
               <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
-              <p>Berlin, Germany</p>
+              <p><small> Berlin, Germany</small></p>
             </figcaption>
           </figure>
         </li>
@@ -233,8 +236,9 @@
           <figure>
             <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
+              <span class="speaker-company">EPAM</span>
               <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
-              <p>Amsterdam, The Netherlands</p>
+              <p><small>Amsterdam, The Netherlands</small></p>
             </figcaption>
           </figure>
         </li>
@@ -243,8 +247,9 @@
           <figure>
             <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
             <figcaption>
+              <span class="speaker-company">Google</span>
               <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
-              <p>Zürich, Switzerland</p>
+              <p><small>Zürich, Switzerland</small></p>
             </figcaption>
           </figure>
         </li>
@@ -253,8 +258,20 @@
           <figure>
             <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
             <figcaption>
+              <span class="speaker-company">EPAM</span>
               <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
-              <p>Amsterdam, The Netherlands</p>
+              <p><small>Amsterdam, The Netherlands</small></p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/martin-woolley.jpg" alt="Martin Woolley photo">
+            <figcaption>
+              <span class="speaker-company">Bluetooth SIG</span>
+              <h3><a href="speakers/martin-woolley.html">Martin Woolley</a></h3>
+              <p><small> London, United Kingdom</small></p>
             </figcaption>
           </figure>
         </li>
