add info & travel partners

--- a/app/index.html
+++ b/app/index.html
@@ -417,6 +417,29 @@
         </li>
       </ul>
 
+      <h2>Travel Sponsors</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://www.bluetooth.com/">
+            <img src="images/partners/logo-bluetooth-sig.svg" alt="bluetooth logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.google.com/">
+            <img src="images/partners/logo-google.svg" alt="google logo"/>
+          </a>
+        </li>
+      </ul>
+
+      <h2>Info Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://twitter.com/_jskitchen">
+            <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
+          </a>
+        </li>
+      </ul>
+
 
       <p><a class="btn"
             href="mailto:rolling.scopes@gmail.com">Become
