add speaker: Alex Saft

--- a/app/index.html
+++ b/app/index.html
@@ -205,7 +205,9 @@
             <figcaption>
               <span class="speaker-company">Self-employed</span>
               <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
-              <p><small>Minsk, Belarus</small></p>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -216,7 +218,9 @@
             <figcaption>
               <span class="speaker-company">Google</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p><small>Los Angeles, US </small></p>
+              <p>
+                <small>Los Angeles, US</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -227,7 +231,9 @@
             <figcaption>
               <span class="speaker-company">wix.com</span>
               <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
-              <p><small> Berlin, Germany</small></p>
+              <p>
+                <small> Berlin, Germany</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -238,7 +244,9 @@
             <figcaption>
               <span class="speaker-company">EPAM</span>
               <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
-              <p><small>Amsterdam, The Netherlands</small></p>
+              <p>
+                <small>Amsterdam, The Netherlands</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -249,7 +257,9 @@
             <figcaption>
               <span class="speaker-company">Google</span>
               <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
-              <p><small>Zürich, Switzerland</small></p>
+              <p>
+                <small>Zürich, Switzerland</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -260,7 +270,9 @@
             <figcaption>
               <span class="speaker-company">EPAM</span>
               <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
-              <p><small>Amsterdam, The Netherlands</small></p>
+              <p>
+                <small>Amsterdam, The Netherlands</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -271,7 +283,20 @@
             <figcaption>
               <span class="speaker-company">Bluetooth SIG</span>
               <h3><a href="speakers/martin-woolley.html">Martin Woolley</a></h3>
-              <p><small> London, United Kingdom</small></p>
+              <p>
+                <small> London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-saft.jpg" alt="Alexander Saft photo">
+            <figcaption>
+              <span class="speaker-company">Lifestream</span>
+              <h3><a href="speakers/alexander-saft.html">Alexander Saft</a></h3>
+              <p><small> Moscow, Russia</small></p>
             </figcaption>
           </figure>
         </li>
