add partnership doc

--- a/app/become-a-partner.html
+++ b/app/become-a-partner.html
@@ -34,25 +34,43 @@
 
 
   <section>
-    <div class="content-lg">
-      <h2>RS Conf 2019: Partnership Packages</h2>
+    <div class="content-lg text-left">
+
+
+      <div style="float: right; width: 30%; text-align: right">
+
+        <p>
+          <small>The biggest conference in Belarus focusing on developing and designing Web, JavaScript, Node.JS,
+            Mobile, Smart TV, VR/AR applications. <br>Backed by The Rolling Scopes developer community since 2015.
+          </small>
+        </p>
+
+      </div>
+
+      <div style="width: 30%; margin-bottom: 30px;">
+        <img style="max-width: 100%" src="images/the_rolling_scopes_conference.png" alt="">
+
+      </div>
 
       <p>Minsk, 9-11 August 2019</p>
       <p>1000+ participants</p>
+      <p>3 days</p>
 
       <p>Topics: JavaScript, Front-end, Mobile, UX/Design</p>
-
+      <p>Organizers: <a target="_blank" href="https://rollingscopes.com/">The Rolling Scopes</a>, <a target="_blank"
+                                                                                                     href="http://imaguru.co">Imaguru</a>
+      </p>
       <p>Venue: <a target="_blank" href="http://ok16.by">http://ok16.by</a></p>
-
       <p>Conference site: <a href="https://rsconf.by">https://rsconf.by</a></p>
 
     </div>
   </section>
 
   <section>
-    <div class="content-lg">
+    <div class="content-lg padding-top-md">
+      <h2 class="text-lg">RS Conf 2019: Partnership Packages</h2>
 
-      <table class="sponsorship-packages">
+      <table class="sponsorship-packages padding-top-md">
         <thead>
         <tr>
           <th>&nbsp;</th>
@@ -85,7 +103,7 @@
 
         <tr>
           <td>
-            <h5>Max number of booth workers without tickets</h5>
+            <h5>Max number of booth representers without tickets</h5>
           </td>
           <td>
             8
@@ -100,7 +118,7 @@
 
         <tr>
           <td>
-            <h5>An opportunity to put company gifts in the Participant Pack</h5>
+            <h5>An opportunity to include company gifts in the Participant’s Pack</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -115,7 +133,7 @@
 
         <tr>
           <td>
-            <h5>Company logo on participants’ t-shirts</h5>
+            <h5>Company logo on the participants’ t-shirts</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -145,7 +163,7 @@
 
         <tr>
           <td>
-            <h5>Company logo on participants’ badges</h5>
+            <h5>Company logo on the participants’ badges</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -159,7 +177,20 @@
 
         <tr>
           <td>
-            <h5>Company logo at the beginning of talks video</h5>
+            <h5>Company logo on the videos of the talks</h5>
+          </td>
+          <td>
+            <i class="fas fa-check-circle"></i>
+          </td>
+          <td>
+            <i class="fas fa-check-circle"></i>
+          </td>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h5>Posts on social networks (FB/VK) and mention in the newsletter</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -173,21 +204,7 @@
 
         <tr>
           <td>
-            <h5>Posts on social networks (FB/VK) and mention in a newsletter</h5>
-          </td>
-          <td>
-            <i class="fas fa-check-circle"></i>
-          </td>
-          <td>
-            <i class="fas fa-check-circle"></i>
-          </td>
-          <td>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <h5>Priority opportunity to choose a place under the booth/roll-up</h5>
+            <h5>Priority opportunity to choose a place for the booth/roll-up</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -198,7 +215,7 @@
 
         <tr>
           <td>
-            <h5>The opportunity to place a company roll-ups on all scenes of the conference</h5>
+            <h5>An opportunity to put company roll-ups on all scenes of the conference</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -239,7 +256,7 @@
     </div>
   </section>
 
-  <section class="no-print">
+  <section>
     <div class="content-md">
 
       <h2>How it was in previous years</h2>
