--- a/app/index.html
+++ b/app/index.html
@@ -242,7 +242,7 @@
           <figure>
             <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
-              <span class="speaker-company">EPAM</span>
+              <span class="speaker-company">Uber</span>
               <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
               <p>
                 <small>Amsterdam, The Netherlands</small>
@@ -445,8 +445,8 @@
       <h2>Travel Sponsors</h2>
       <ul class="partner-list">
         <li>
-          <a target="_blank" href="https://www.bluetooth.com/">
-            <img src="images/partners/logo-bluetooth-sig.svg" alt="bluetooth logo"/>
+          <a target="_blank" href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
+            <img src="images/partners/logo-bluetooth.png" alt="bluetooth logo"/>
           </a>
         </li>
         <li>
