--- a/app/partners.html
+++ b/app/partners.html
@@ -160,8 +160,36 @@
         </li>
       </ul>
 
+      <h2>Travel Sponsors</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
+            <img src="images/partners/logo-bluetooth.png" alt="bluetooth logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.google.com/">
+            <img src="images/partners/logo-google.svg" alt="google logo"/>
+          </a>
+        </li>
+      </ul>
+
+      <h2>Info Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://twitter.com/_jskitchen">
+            <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
+          </a>
+        </li>
+      </ul>
+
+
+      <p><a class="btn"
+            href="mailto:rolling.scopes@gmail.com">Become
+        a Partner</a></p>
+
     </div>
-      <div class="content-md">
+      <div class="content-md padding-top-md">
       <p class="text-lg">We would be happy to discuss any kind
         of partnership and gladly accept any help.</p>
 
