fix: partnership page styles

--- a/app/become-a-partner.html
+++ b/app/become-a-partner.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-55428637-2');
+  </script>
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,41 +48,27 @@
 
   <section>
     <div class="content-lg text-left">
-
-
-      <div style="float: right; width: 30%; text-align: right">
-
+      <div class="short-conf-description">
         <p>
           <small>The biggest conference in Belarus focusing on developing and designing Web, JavaScript, Node.JS,
-            Mobile, Smart TV, VR/AR applications. <br>Backed by The Rolling Scopes developer community since 2015.
+            Mobile, Smart TV, VR/AR applications. Backed by The Rolling Scopes developer community since 2015.
           </small>
         </p>
-
       </div>
-
-      <div style="width: 30%; margin-bottom: 30px;">
-        <img style="max-width: 100%" src="images/the_rolling_scopes_conference.png" alt="">
-
-      </div>
-
+      <img src="images/the_rolling_scopes_conference.png" alt="">
       <p>Minsk, 9-11 August 2019</p>
       <p>1000+ participants</p>
       <p>3 days</p>
-
       <p>Topics: JavaScript, Front-end, Mobile, UX/Design</p>
       <p>Organizers: <a target="_blank" href="https://rollingscopes.com/">The Rolling Scopes</a>, <a target="_blank"
                                                                                                      href="http://imaguru.co">Imaguru</a>
       </p>
       <p>Venue: <a target="_blank" href="http://ok16.by">http://ok16.by</a></p>
       <p>Conference site: <a href="https://rsconf.by">https://rsconf.by</a></p>
-
     </div>
-  </section>
 
-  <section>
     <div class="content-lg padding-top-md">
       <h2 class="text-lg">RS Conf 2019: Partnership Packages</h2>
-
       <table class="sponsorship-packages padding-top-md">
         <thead>
         <tr>
@@ -258,7 +257,6 @@
 
   <section>
     <div class="content-md">
-
       <h2>How it was in previous years</h2>
       <ul class="previous-conf-list text-lg">
         <li><a target="_blank" href="https://www.youtube.com/watch?v=2A9jOrbpizU">2018</a></li>
@@ -266,12 +264,8 @@
         <li><a target="_blank" href="https://www.youtube.com/watch?v=k40JJ4pT1YU">2016</a></li>
         <li><a target="_blank" href="https://www.youtube.com/watch?v=1Vtnu_K7QvQ">2015</a></li>
       </ul>
-
-
     </div>
   </section>
-
-
 </div>
 
 <!-- build:js scripts/vendor.js -->
